fix movie card text overflow, move search action to component

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,4 +26,8 @@
   .empty-results { 
     height: 100vh; 
   }
+
+  .card-block {
+    word-wrap: break-word;
+  }
 }
